fixed some tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,9 @@ jobs:
         run: |
           ruff check app.py
 
+      - name: Install Playwright Browsers
+        run: playwright install
+
       - name: Run test
         run: pytest 
 
